# graphee

./: .doxyconf  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md
examples/: dump_pr.cpp  load.cc  load_data.sh  matvecprod.cpp  pagerank.cc  pagerank.cpp  split  split.cc  split.cpp
src/: disk_sparse_matrix.h  disk_sparse_matrix.hpp  disk_vector.h  disk_vector.hpp  edgelist.cpp  edgelist.hpp  gpe_bsmat_csr.h  gpe_bsmat_dcsr.h  gpe_diskmat.h  gpe_diskvec.h  gpe_dmat_dvec_mult.h  gpe_pagerank.h  gpe_props.h  gpe_smat_csr.h  gpe_utils.cc  gpe_utils.h  gpe_vec.h  graphee.h  graphee.hpp  pagerank.h  pagerank.hpp  properties.h  properties.hpp  sparse_bmatrix_csr.h  sparse_bmatrix_csr.hpp  sparse_bmatrix_dcsr.hpp  sparse_matrix_csr.h  sparse_matrix_csr.hpp  sparse_matrix_dcsr.h  sparse_matrix_dcsr.hpp  utils.cc  utils.cpp  utils.h  utils.hpp  vector.h  vector.hpp
test/: test_pagerank.cpp
test/ressources/: README.txt
